--- a/public/tournamenter-obr/index.html
+++ b/public/tournamenter-obr/index.html
@@ -9,9 +9,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 	<!-- <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'> -->
-	<link rel="stylesheet" href="components/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="components/font-awesome/font-awesome.css">
+	<link rel="stylesheet" href="components/bootstrap/bootstrap.css">
+	<!-- <link rel="stylesheet" href="components/bootstrap/bootstrap-theme.min.css"> -->
 	<!-- <link rel="stylesheet" href="components/circliful/css/jquery.circliful.css"> -->
 	<link rel="stylesheet" href="styles/site.css">
 
@@ -36,14 +36,14 @@
 	<div data-ng-view id="content" class="animate-fade-up"></div>
 
 	<!-- build:js scripts/vendor.js -->
-	<script src="components/underscore/underscore-min.js"></script>
-	<script src="components/jquery/dist/jquery.min.js"></script>
+	<script src="components/underscore/underscore.js"></script>
+	<script src="components/jquery/jquery.js"></script>
 	<script src="components/angular/angular.js"></script>
-	<script src="components/angular-route/angular-route.min.js"></script>
-	<script src="components/angular-animate/angular-animate.min.js"></script>
-	<script src="components/angular-resource/angular-resource.min.js"></script>
-	<script src="components/angular-bootstrap/ui-bootstrap.min.js"></script>
-	<script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+	<script src="components/angular-route/angular-route.js"></script>
+	<script src="components/angular-animate/angular-animate.js"></script>
+	<script src="components/angular-resource/angular-resource.js"></script>
+	<script src="components/angular-bootstrap/ui-bootstrap.js"></script>
+	<script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 	<!-- endbuild -->
 
 	<!-- build:js scripts/site-ui.js -->
