--- a/public/tournamenter-obr/index.html
+++ b/public/tournamenter-obr/index.html
@@ -4,24 +4,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-	<title>OBR Scorer</title>
+	<title>Pontuador OBR Regional 2017</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-	<!-- <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet" href="components/font-awesome/font-awesome.css">
 	<link rel="stylesheet" href="components/bootstrap/bootstrap.css">
-	<!-- <link rel="stylesheet" href="components/bootstrap/bootstrap-theme.min.css"> -->
-	<!-- <link rel="stylesheet" href="components/circliful/css/jquery.circliful.css"> -->
 	<link rel="stylesheet" href="styles/site.css">
 
 	<!-- WebApp -->
 	<link rel="manifest" href="manifest.json">
-	<link rel="icon" sizes="128x128" href="img/icon.png">
+	<link rel="icon" sizes="128x128" href="images/icon.png">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<link rel="apple-touch-icon" sizes="128x128" href="img/icon.png">
-	<link rel="apple-touch-icon-precomposed" sizes="128x128" href="img/icon.png">
 
 	<style type="text/css">
 	.ended{
@@ -51,6 +46,7 @@
 
 	<!-- build:js({.tmp,client}) scripts/participar.js -->
 	<script src="scripts/app.js"></script>
+	<script src="scripts/scorers.js"></script>
 	<script src="scripts/controllers.js"></script>
 	<!-- endbuild -->
 </body>
